--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                 <a href="mailto:visavadiapa@gmail.com" target="_blank">
                     <img src="./images/email.png" alt="">
                 </a>
-                <a href="https://wa.me/+917984863441?text=urlencodedtext" target="_blank">
+                <a href="https://wa.me/+917984863441?text=Hi, I've visited your Portfolio website. Let's connect" target="_blank">
                     <img src="./images/whatsapp.png" alt="">
                 </a>
                 <a href="https://www.instagram.com/v.pranav1326/" target="_blank">
