--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 </div>
                 <div class="links-div">
                     <h4>Live-Project: </h4>
-                    <a href="https://github.com/Pranav1326/Time-Tracking-Dashboard-Frontend-Mentor" target="_blank">https://github.com/Pranav1326/Time-Tracking-Dashboard-Frontend-Mentor</a>
+                    <a href="https://pranav1326.github.io/Time-Tracking-Dashboard-Frontend-Mentor/" target="_blank">https://pranav1326.github.io/Time-Tracking-Dashboard-Frontend-Mentor/</a>
                     <br>
                     <br>
                     <h4>Github: </h4>
@@ -274,12 +274,12 @@
                     <p>html, css, javascript</p>
                 </div>
                 <div class="links-div">
-                    <!-- <h4>Live-Project: </h4>
-                    <a href="https://stack-overflow-clone-pranav.netlify.app/" target="_blank">https://stack-overflow-clone-pranav.netlify.app/</a>
+                    <h4>Live-Project: </h4>
+                    <a href="https://pranav1326.github.io/word-scrumbling/" target="_blank">https://pranav1326.github.io/word-scrumbling/</a>
                     <br>
-                    <br> -->
+                    <br>
                     <h4>Github: </h4>
-                    <a href="https://pranav1326.github.io/word-scrumbling/" target="_blank">https://pranav1326.github.io/word-scrumbling</a>
+                    <a href="https://github.com/Pranav1326/word-scrumbling" target="_blank">https://github.com/Pranav1326/word-scrumbling</a>
                 </div>
             </div>
             
