profile picture udpate

--- a/index.html
+++ b/index.html
@@ -285,12 +285,16 @@
             
         </div>
     </section>
+    <!-- Section-5 = Education -->
+    <section class="five">
+        <h1 class="education-details-title">Education Details:</h1>
+    </section>
     <!-- Section-3 = About -->
     <section class="four" id="about">
         <h1 class="about-title">About:</h1>
         <div class="about-sub-section">
             <div class="about-text-div">
-                <p class="about-text">I am Pranav Visavadia a BCA student aspiring for Full Stack Developer | MERN Stack Developer.</p>
+                <p class="about-text">I am Pranav Visavadia a MCA student aspiring for Full Stack Developer | MERN Stack Developer.</p>
                 <p>I am a web-designer and developer.</p>
                 <p>I am developing web since 2020.</p>
                 <h1 class="social-links-title">Social Links: </h1>
