Educational Details create

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="#education">Education</a></li>
                 <li><a href="#about">About</a></li>
             </ul>
             <a class="ham-menu">
@@ -39,6 +40,7 @@
                 <h2>Frontend-</h2>
                 <p>Figma</p>
                 <p>ReactJS</p>
+                <p>Next.js</p>
                 <p>Redux</p>
                 <p>HTML</p>
                 <p>CSS</p>
@@ -286,8 +288,51 @@
         </div>
     </section>
     <!-- Section-5 = Education -->
-    <section class="five">
+    <section class="five" id="education">
         <h1 class="education-details-title">Education Details:</h1>
+        <div class="education-details">
+            <div class="left">
+                <div class="education-detail-1">
+                    <h2>Master of Computer Application</h2>
+                    <h3>MIT - World Peace University</h3>
+                    <p>2023-Present</p>
+                    <p>CGPA: 7.65</p>
+                </div>
+                <div class="education-detail-2">
+                    <h2>H.S.C</h2>
+                    <h3>Alpha High School</h3>
+                    <h3>Gujarat Secondary and Higher Secondary Education Board</h3>
+                    <p>2015-2017</p>
+                    <p>Percentage: 60%</p>
+                </div>
+            </div>
+            <!-- Timeline -->
+            <div class="timeline">
+                <div class="point"></div>
+                <div class="line"></div>
+                <div class="point"></div>
+                <div class="line line-2"></div>
+                <div class="point"></div>
+                <div class="line line-3"></div>
+                <div class="point"></div>
+            </div>
+            <div class="right">
+                <div class="education-detail-3">
+                    <h2>Bachlor of Computer Application</h2>
+                    <h3>Dr. Subhash School of Computer Science</h3>
+                    <h3>Bhakta Kavi Narsinh Mehta University</h3>
+                    <p>2020-2023</p>
+                    <p>CGPA: 8.94</p>
+                </div>
+                <div class="education-detail-4">
+                    <h2>S.S.C</h2>
+                    <h3>Noble High School</h3>
+                    <h3>Gujarat Secondary and Higher Secondary Education Board</h3>
+                    <p>2014-2015</p>
+                    <p>Percentage: 73%</p>
+                </div>
+            </div>
+        </div>
     </section>
     <!-- Section-3 = About -->
     <section class="four" id="about">
