Education detils design update and media query update

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pranav's Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="style.css">
     <script defer src="index.js"></script>
 </head>
@@ -291,46 +292,32 @@
     <section class="five" id="education">
         <h1 class="education-details-title">Education Details:</h1>
         <div class="education-details">
-            <div class="left">
-                <div class="education-detail-1">
-                    <h2>Master of Computer Application</h2>
-                    <h3>MIT - World Peace University</h3>
-                    <p>2023-Present</p>
-                    <p>CGPA: 7.65</p>
-                </div>
-                <div class="education-detail-2">
-                    <h2>H.S.C</h2>
-                    <h3>Alpha High School</h3>
-                    <h3>Gujarat Secondary and Higher Secondary Education Board</h3>
-                    <p>2015-2017</p>
-                    <p>Percentage: 60%</p>
-                </div>
+            <div class="education-detail-1">
+                <h2>Master of Computer Application</h2>
+                <h3>MIT - World Peace University</h3>
+                <p>2023-Present</p>
+                <p>CGPA: 7.65</p>
             </div>
-            <!-- Timeline -->
-            <div class="timeline">
-                <div class="point"></div>
-                <div class="line"></div>
-                <div class="point"></div>
-                <div class="line line-2"></div>
-                <div class="point"></div>
-                <div class="line line-3"></div>
-                <div class="point"></div>
+            <div class="education-detail-3">
+                <h2>Bachlor of Computer Application</h2>
+                <h3>Dr. Subhash School of Computer Science</h3>
+                <h3>Bhakta Kavi Narsinh Mehta University</h3>
+                <p>2020-2023</p>
+                <p>CGPA: 8.94</p>
             </div>
-            <div class="right">
-                <div class="education-detail-3">
-                    <h2>Bachlor of Computer Application</h2>
-                    <h3>Dr. Subhash School of Computer Science</h3>
-                    <h3>Bhakta Kavi Narsinh Mehta University</h3>
-                    <p>2020-2023</p>
-                    <p>CGPA: 8.94</p>
-                </div>
-                <div class="education-detail-4">
-                    <h2>S.S.C</h2>
-                    <h3>Noble High School</h3>
-                    <h3>Gujarat Secondary and Higher Secondary Education Board</h3>
-                    <p>2014-2015</p>
-                    <p>Percentage: 73%</p>
-                </div>
+            <div class="education-detail-2">
+                <h2>H.S.C</h2>
+                <h3>Alpha High School</h3>
+                <h3>Gujarat Secondary and Higher Secondary Education Board</h3>
+                <p>2015-2017</p>
+                <p>Percentage: 60%</p>
+            </div>
+            <div class="education-detail-4">
+                <h2>S.S.C</h2>
+                <h3>Noble High School</h3>
+                <h3>Gujarat Secondary and Higher Secondary Education Board</h3>
+                <p>2014-2015</p>
+                <p>Percentage: 73%</p>
             </div>
         </div>
     </section>
