About section update

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- Navbar -->
-    <div class="navbar">
+    <div class="navbar" id="navbar">
         <div class="logo">Pranav</div>
         <div class="links">
             <ul class="ulLinks">
@@ -326,9 +326,8 @@
         <h1 class="about-title">About:</h1>
         <div class="about-sub-section">
             <div class="about-text-div">
-                <p class="about-text">I am Pranav Visavadia a MCA student aspiring for Full Stack Developer | MERN Stack Developer.</p>
-                <p>I am a web-designer and developer.</p>
-                <p>I am developing web since 2020.</p>
+                <p class="about-text">Hello! I'm Pranav Visavadia.</p>
+                <p class="about-text-sub">Welcome to my portfolio! As a passionate and dedicated aspiring full-stack developer from India, I specialize in the MERN stack (MongoDB, Express.js, React.js, Node.js). I hold a Bachelor of Computer Application degree and am currently pursuing a Master of Computer Application, fine-tuning my expertise to become a frontrunner in the tech industry.</p>
                 <h1 class="social-links-title">Social Links: </h1>
                 <a href="https://github.com/pranav1326" target="_blank">
                     <img src="./images/github-mark-white.png" class="github-logo" alt="">
