--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
     </section>
     <!-- Footer -->
     <div class="footer">
-        <p>Designed and Developed by Pranav</p>
+        <p>Designed and Developed by <a href="https://github.com/pranav1326" target="_blank">Pranav</a></p>
     </div>
 </body>
 <!-- credit-of-matrix-effect: https://codepen.io/gnsp/pen/vYBQZJm  -->
