--- a/index.html
+++ b/index.html
@@ -347,7 +347,10 @@
                 <a href="https://in.pinterest.com/visavadiapranav/" class="pinterest-logo" target="_blank">
                     <img src="./images/pinterest.png" alt="">
                 </a>
-                <button class="resume-btn"><a class="resume-btn-link" href="https://www.canva.com/design/DAFJq_82oLM/Y3iw9KOFgtPVnSRF8DnCpQ/view?utm_content=DAFJq_82oLM&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink#1" target="_blank"> Resume </a></button>
+                <button class="resume-btn">
+                    <!-- <a class="resume-btn-link" href="https://www.canva.com/design/DAFJq_82oLM/Y3iw9KOFgtPVnSRF8DnCpQ/view?utm_content=DAFJq_82oLM&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink#1" target="_blank"> Resume </a> -->
+                    <a class="resume-btn-link" href="https://app.enhancv.com/share/647b7694/?utm_medium=growth&utm_campaign=share-resume&utm_source=dynamic" target="_blank"> Resume </a>
+                </button>
             </div>
             <div class="about-profile-div">
                 <div class="profile-mask">
